United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 7103261 crash with jittester on sparc
7103261 : crash with jittester on sparc

Details
Type:
Bug
Submit Date:
2011-10-20
Status:
Closed
Updated Date:
2013-04-24
Project Name:
JDK
Resolved Date:
2012-01-23
Component:
hotspot
OS:
solaris_10
Sub-Component:
compiler
CPU:
x86
Priority:
P3
Resolution:
Fixed
Affected Versions:
hs23
Fixed Versions:
hs23

Related Reports
Backport:
Backport:
Relates:

Sub Tasks

Description
http://sqeweb.us.oracle.com/nfs/results/vm/gtee/JDK7/NIGHTLY/VM/2011-10-18/Comp_Baseline-T4/jittester/solaris-sparc/client/comp/solaris-sparc_jittester_client_comp_testlist/results/10-19-2011/386/

;; Using jvm: "/export/home/local/common/jdk/baseline/solaris-sparc/jre/lib/sparc/client/libjvm.so"
#
# A fatal error has been detected by the Java Runtime Environment:
#
#  SIGSEGV (0xb) at pc=0xfbc50274, pid=6778, tid=2
#
# JRE version: 7.0-b147
# Java VM: Java HotSpot(TM) Client VM (23.0-b03-internal-201110180851.bd148109.hotspot-fastdebug compiled mode, sharing solaris-sparc )
# Problematic frame:
# J  Test_Class_1.<init>()V
#
# Core dump written. Default location: /export/home/local/55684.JDK7.NIGHTLY.VM_solaris-sparc_jittester_client_comp_testlist/results/wrk_dir1319049880872/core or core.6778
#
# If you would like to submit a bug report, please visit:
#   http://bugreport.sun.com/bugreport/crash.jsp
#

---------------  T H R E A D  ---------------


Leonid,

I will look on it tomorrow, I don't know if it is new since it is C1 and not C2. It hit SEGV in code compiled by Client compiler while loading through NULL:

L0=0x00000000

;; 00000000fbc50274 c0 24 20 0c             clr  [ %l0 + 0xc ]
;; 00000000fbc50278 c0 24 20 08             clr  [ %l0 + 8 ]

When this happens in debug VM nmethod::continuation_for_implicit_exception() tries to print to terminal method's bytecode and compiled code. Unfortunately there is no flag to control it.

Vladimir

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/lambda/lambda/hotspot/rev/eba044a722a4
                                     
2012-03-22
EVALUATION

See main CR
                                     
2011-11-30
EVALUATION

http://hg.openjdk.java.net/hsx/hotspot-emb/hotspot/rev/eba044a722a4
                                     
2011-11-29
EVALUATION

http://hg.openjdk.java.net/hsx/hotspot-rt/hotspot/rev/eba044a722a4
                                     
2011-11-15
EVALUATION

http://hg.openjdk.java.net/hsx/hotspot-comp/hotspot/rev/eba044a722a4
                                     
2011-10-29
EVALUATION

The changes for 6985015 rearranged the logic for recording implicit exceptions but save the offset of the faulting instruction twice instead of just for the first one.  This means the implicit exception is in on the second instruction instead of the first.
                                     
2011-10-20
SUGGESTED FIX

diff -r e5928e7dab26 src/cpu/sparc/vm/c1_LIRAssembler_sparc.cpp
--- a/src/cpu/sparc/vm/c1_LIRAssembler_sparc.cpp
+++ b/src/cpu/sparc/vm/c1_LIRAssembler_sparc.cpp
@@ -1116,7 +1116,7 @@
       } else {
         __ set(value_hi, O7);
       }
-      offset = store(tmp, base, addr->disp() + hi_word_offset_in_bytes, T_INT, wide, false);
+      store(tmp, base, addr->disp() + hi_word_offset_in_bytes, T_INT, wide, false);
       break;
     }
     case T_OBJECT: {
                                     
2011-10-20



Hardware and Software, Engineered to Work Together