7103261: crash with jittester on sparc

Reviewed-by: iveresov, kvn